add getRun, postRun
