# internal/run/studio/generated-studio-sdk/models/components/runresponse.go
@@ -1,8 +1,52 @@
-// Code generated by Speakeasy (https://speakeasyapi.dev). DO NOT EDIT.
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
 
 package components
 
+type AdditionalProperties struct {
+	// Contents of the README file for this target
+	Readme string `json:"readme"`
+	// Contents of the gen.yaml file for this target
+	GenYaml string `json:"gen_yaml"`
+	// Output directory for this target
+	OutputDirectory string `json:"output_directory"`
+	// Language for this target
+	Language string `json:"language"`
+}
+
+func (o *AdditionalProperties) GetReadme() string {
+	if o == nil {
+		return ""
+	}
+	return o.Readme
+}
+
+func (o *AdditionalProperties) GetGenYaml() string {
+	if o == nil {
+		return ""
+	}
+	return o.GenYaml
+}
+
+func (o *AdditionalProperties) GetOutputDirectory() string {
+	if o == nil {
+		return ""
+	}
+	return o.OutputDirectory
+}
+
+func (o *AdditionalProperties) GetLanguage() string {
+	if o == nil {
+		return ""
+	}
+	return o.Language
+}
+
 type RunResponse struct {
+	AdditionalProperties *AdditionalProperties `json:"additionalProperties,omitempty"`
+	// Source ID in the workflow file
+	SourceID string `json:"sourceID"`
+	// Target ID in the workflow file
+	TargetID *string `json:"targetID,omitempty"`
 	// List of errors
 	Errors []string `json:"errors,omitempty"`
 	// List of warnings
@@ -16,7 +60,29 @@ type RunResponse struct {
 	// Count of linting warnings
 	LintingWarningCount *int64 `json:"lintingWarningCount,omitempty"`
 	// Count of linting informational messages
-	LintingInfoCount *int64 `json:"lintingInfoCount,omitempty"`
+	LintingInfoCount *int64          `json:"lintingInfoCount,omitempty"`
+	SourceResult     *SourceResponse `json:"sourceResult,omitempty"`
+}
+
+func (o *RunResponse) GetAdditionalProperties() *AdditionalProperties {
+	if o == nil {
+		return nil
+	}
+	return o.AdditionalProperties
+}
+
+func (o *RunResponse) GetSourceID() string {
+	if o == nil {
+		return ""
+	}
+	return o.SourceID
+}
+
+func (o *RunResponse) GetTargetID() *string {
+	if o == nil {
+		return nil
+	}
+	return o.TargetID
 }
 
 func (o *RunResponse) GetErrors() []string {
@@ -66,4 +132,11 @@ func (o *RunResponse) GetLintingInfoCount() *int64 {
 		return nil
 	}
 	return o.LintingInfoCount
+}
+
+func (o *RunResponse) GetSourceResult() *SourceResponse {
+	if o == nil {
+		return nil
+	}
+	return o.SourceResult
 }
